tests/src/errors/methodDestructure/arr.spec.3.ts
{
	const arr = [1, 2, 3, 4];
	const i: "isEmpty" = "isEmpty";
	const c = arr.isEmpty;
}
export {};
